#26 Game Page Ingredients List fixed on iOS

--- a/lb-contest-front/src/assets/scss/components/BottomBar.scss
+++ b/lb-contest-front/src/assets/scss/components/BottomBar.scss
@@ -30,7 +30,7 @@
 
     &__list {
         display: flex;
-        justify-content: space-evenly;
+        // justify-content: space-evenly;
         width: 100%;
         list-style-type: none;
         position: relative;
